# astrocut

./: .codecov.yml  .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGES  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: changelog.yml  ci_workflows.yml  draft-pdf.yml  pypi-package.yml  test-pypi-package.yml
astrocut/: ASDFCutout.py  CubeCutout.py  CubeFactory.py  Cutout.py  FITSCutout.py  FootprintCutout.py  ImageCutout.py  README.rst  RomanCutout.py  TessCubeCutout.py  TessFootprintCutout.py  TicaCubeFactory.py  __init__.py  _astropy_init.py  asdf_cutout.py  asdf_cutouts.py  asdf_spectral_cutout.py  asdf_spectral_subset.py  conftest.py  cube_cut.py  cube_cut_from_footprint.py  cube_cutout.py  cube_factory.py  cutout.py  cutout_factory.py  cutout_processing.py  cutouts.py  exceptions.py  fits_cut.py  fits_cutout.py  footprint_cutout.py  footprint_cutouts.py  image_cutout.py  make_cube.py  ps1_footprint_cutout.py  roman_spectral_cutout.py  roman_spectral_subset.py  spectral_cutout.py  spectral_subset.py  tess_cube_cutout.py  (+4 more)
astrocut/example_subpkg/: setup_package.py
astrocut/tests/: setup_package.py  test_ASDFCutout.py  test_CubeCutout.py  test_CubeFactory.py  test_FITSCutout.py  test_ImageCutout.py  test_TessCubeCutout.py  test_TessFootprintCutout.py  test_asdf_cut.py  test_asdf_cutout.py  test_cube_cut.py  test_cube_factory.py  test_cutout_processing.py  test_cutouts.py  test_fits_cut.py  test_fits_cutout.py  test_footprint_cutouts.py  test_image_cutout.py  test_make_cube.py  test_roman_spectral_cutout.py  test_roman_spectral_subset.py  test_tess_cube_cutout.py  test_tess_footprint_cutout.py  test_utils.py  utils_for_test.py
astrocut/tests/data/: ex_ffi_wcs.txt  tess_ffi_footprints.json  tica_ffi_footprints.json
astrocut/utils/: logger.py  utils.py  wcs_fitting.py
docs/: conf.py  index.html  index.rst  license.rst
docs/_static/: astrocut.css  main.css
docs/_templates/: layout.html
docs/astrocut/: api.rst  contents.rst  file_formats.rst  index.rst  install.rst  license.rst
joss/: paper.md
licenses/: LICENSE.rst
