[metadata]
name = astrocut
author = MAST Archive Developers
author_email = archive@stsci.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://astrocut.readthedocs.io
description = Cutout tools for astronomical images
long_description = file: README.rst
edit_on_github = False
github_project = spacetelescope/astrocut

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy >=3.0
    scipy
    Pillow

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
astrocut.tests = data/*

[tool:pytest]
testpaths = "astrocut" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[flake8]
exclude = extern,sphinx,*parsetab.py,astrocut

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[coverage:run]
omit =
    astrocut/_astropy_init*
    astrocut/conftest.py
    astrocut/*setup_package*
    astrocut/tests/*
    astrocut/*/tests/*
    astrocut/extern/*
    astrocut/version*
    */astrocut/_astropy_init*
    */astrocut/conftest.py
    */astrocut/*setup_package*
    */astrocut/tests/*
    */astrocut/*/tests/*
    */astrocut/extern/*
    */astrocut/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_






